# narcissus

./: CLAUDE.md  README.md  TODO.md
python-agent/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  visualize_graph.py
python-agent/src/narcissus/: __init__.py  agent.py
python-agent/src/narcissus/personality/: __init__.py  system_prompt.py
python-agent/src/narcissus/tools/: __init__.py  aci_integration.py  atla_tools.py
ui/: next.config.mjs
ui/src/app/: globals.css  layout.tsx  metadata.ts
ui/src/components/icons/: atla-wide.tsx  atla.tsx
ui/src/components/thread/: index.tsx  tooltip-icon-button.tsx
widget/: README.md  chat-widget.html  webflow-embed.html
