[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narcissus"]

[project]
name = "narcissus"
version = "0.1.0"
description = "A basic LangGraph agent package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aci-sdk>=1.0.0b3",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "langgraph-cli>=0.1.0",
    "atla-insights[langchain,openai]>=0.0.11",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "mypy>=1.0.0", "pytest>=7.0.0"]


[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "langgraph-cli[inmem]>=0.3.6",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "skip"
follow_untyped_imports = false
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[dependency-groups]
dev = ["langgraph-cli[inmem]>=0.3.6"]
