[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narcissus"]

[project]
name = "narcissus"
version = "0.1.0"
description = "A basic LangGraph agent package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aci-sdk>=1.0.0b3",
    "atla-insights[langchain,openai]>=0.0.11",
    "langgraph>=0.6.0",
    "langgraph-cli>=0.3.6",
    "langchain>=0.3.7",
    "langchain-openai>=0.3.28",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "types-requests>=2.32.4.20250611",
]

[tool.uv]
dev-dependencies = ["mypy>=1.17.0", "pytest>=8.4.1", "ruff>=0.12.5"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "skip"
follow_untyped_imports = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
